--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,11 +11,11 @@
 
 <body>
     <div class="main-content">
- {{>header}}
+    {{>header}}
+    <p>This site was created by Ibrahim Inamdar. It uses data from mapbox.com and weather.bit!</p>
     <img src="./img/robot.png" class="portrait" alt="robot">
     </div>
-       
-        {{>footer}}
+    {{>footer}}
 </body>
 
 </html>
